fixed button spacing issue, reorderd button attributes for readability

--- a/GigHub/Content/Site.css
+++ b/GigHub/Content/Site.css
@@ -97,15 +97,16 @@ body, .tooltip {
     list-style: none;
 }
 
-    .gigs > li {
-        position: relative;
-        margin-bottom: 30px;
-    }
+.gigs > li {
+    position: relative;
+    margin-bottom: 30px;
+}
 
 .details {
     position: absolute;
     top: 5px;
     left: 70px;
+    width: 110px;
 }
 
 .date, .details {
